some big changes

--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Henry. All rights reserved.</p>
+            <p>&copy; 2024 Shenqiu Huang (Henry). All rights reserved.</p>
+            <p class="small-text">Powered by Github. Constructioned with ChatGPT</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/shenqiu-huang-aka-henry/">LinkedIn</a>
-                <a href="https://www.instagram.com/henryyyyh_ins/">Instagram</a> <!-- Updated Instagram link -->
+                <a href="https://www.instagram.com/henryyyyh_ins?igsh=NmVvdnV2c25kOXRy&utm_source=qr">Instagram</a>
+                <a href="https://www.thingiverse.com/henryyyyhuang/designs">Thingiverse</a>
                 <a href="#">GitHub</a> <!-- You can update this with your actual GitHub link -->
             </div>
         </div>
