--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2024 Shenqiu Huang (Henry). All rights reserved.</p>
-            <p class="small-text">Powered by Github. Constructioned with ChatGPT</p>
+            <p class="small-text">Powered by Github. Constructioned with ChatGPT and my big brain.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/shenqiu-huang-aka-henry/">LinkedIn</a>
                 <a href="https://www.instagram.com/henryyyyh_ins?igsh=NmVvdnV2c25kOXRy&utm_source=qr">Instagram</a>
