--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                [Provide a brief introduction about yourself. Highlight your skills, experiences, and what you’re passionate about.]
+                Hey there! I’m Henry Huang, but you can call me Shenqiu if you’re feeling formal. I’m originally from Shanghai, China, but now I’m calling Dallas, TX, home while I work on my Bachelor’s in Electrical and Computer Engineering at SMU. I’am also minoring in Music – Saxophone Performance because, why not blend tech with some tunes, right?
+                <br><br>
+                I’m big into cycling—I did a lot of racing back in high school. There’s something about the freedom of hitting the open road, breathing in the fresh air under the woods, that just feels right. I’m also a huge fan of all things mechanical, whether it’s bike gears, bearings, or car parts. The craftsmanship and design that goes into these things fascinates me.
+                <br><br>
+                Besides tech and bikes, I’m all about music, with J-pop being my go-to jam. And being in Dallas, I’m still getting the hang of blending different cultures, which has been a cool part of my journey here in the States.
+                <br><br>
+                So yeah, if you’re into tech, bikes, music, or just want to chat about the mix of cultures, hit me up. I’m always down to connect!
             </p>
         </div>
     </section>
