--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 <br><br>
                 Besides tech and bikes, I’m all about music, with J-pop being my go-to jam. And being in Dallas, I’m still getting the hang of blending different cultures, which has been a cool part of my journey here in the States.
                 <br><br>
+                By the way, I'm also in the Mustang Band!!! This is the second year I'm in the marching band and I the atmosphere of the games and rehersals.
+                <br><br>
                 So yeah, if you’re into tech, bikes, music, or just want to chat about the mix of cultures, hit me up. I’m always down to connect!
             </p>
         </div>
