--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="images/photo1.jpg" alt="Gallery Image 1" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/ECU.JPEG?raw=true" alt="Gallery Image 1" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="images/photo2.jpg" alt="Gallery Image 2" class="gallery-img" onclick="openModal(this)">
