--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header with Navigation -->
     <header>
         <nav class="navbar">
-            <div class="logo">🚴🎷🔧</div> <!-- Bicycle and Saxophone emoji as the logo -->
+            <div class="logo">HENRY.H 🚴🎷🔧</div> <!-- Bicycle and Saxophone emoji as the logo -->
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -90,8 +90,8 @@
             <h2>My Projects</h2>
             <div class="project-grid">
                 <div class="project-item">
-                    <img src="images/project1.jpg" alt="Project 1">
-                    <h3>Project One</h3>
+                    <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/ATLAS.JPEG?raw=true" alt="Project 1">
+                    <h3>Research Assistant - SMU Physics ATLAS</h3>
                     <p>A short description of Project One.</p>
                 </div>
                 <div class="project-item">
