Update for my project 1

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/ATLAS.JPEG?raw=true" alt="Project 1">
                     <h3>Research Assistant - SMU Physics ATLAS</h3>
-                    <p>A short description of Project One.</p>
+                    <p>
+                        I was responsible for designing an automated system to ensure instrument stability on the ATLAS Project, 
+                        specifically connecting devices across different protocols and programming lab equipment to streamline data collection. 
+                        I also handled the organization of testing fibers. Additionally, I collaborated with our team to enhance calibration processes and used modern technology to improve inventory management efficiency.
+                    </p>
                 </div>
                 <div class="project-item">
                     <img src="images/project2.jpg" alt="Project 2">
