--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Salad.JPEG?raw=true" alt="Salad" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/photo3.jpg" alt="Gallery Image 3" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.JPEG?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="images/photo4.jpg" alt="Gallery Image 4" class="gallery-img" onclick="openModal(this)">
