--- a/index.html
+++ b/index.html
@@ -84,19 +84,48 @@
 
     </section>
 
-    <!-- Projects Section -->
+    <!-- Experiences and Leadership -->
     <section class="projects" id="projects">
         <div class="container">
-            <h2>My Projects</h2>
+            <h2>Experiences and Leadership</h2>
             <div class="project-grid">
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/ATLAS.JPEG?raw=true" alt="Project 1">
                     <h3>Research Assistant - SMU Physics ATLAS</h3>
                     <p>
+                        May 2024 - Aug 2024
+                    </p>
+                    <p>
                         I was responsible for designing an automated system to ensure instrument stability on the ATLAS Project, 
                         specifically connecting devices across different protocols and programming lab equipment to streamline data collection. 
                         I also handled the organization of testing fibers. Additionally, I collaborated with our team to enhance calibration processes and used modern technology to improve inventory management efficiency.
                     </p>
+                    <a href="https://atlas.cern/"target="_blank">- Learn More on ATLAS.CERN -</a>
+                </div>
+                <div class="project-item">
+                    <img src="images/project2.jpg" alt="Project 2">
+                    <h3>Secretary - IEEE Student Branches</h3>
+                    <p>A short description of Project Two.</p>
+                </div>
+                <div class="project-item">
+                    <img src="images/project3.jpg" alt="Project 3">
+                    <h3>Project Three</h3>
+                    <p>A short description of Project Three.</p>
+                </div>
+                <!-- Add more projects as needed -->
+            </div>
+        </div>
+    </section>
+
+     <!-- Projects Section -->
+     <section class="projects" id="projects">
+        <div class="container">
+            <h2>My Projects</h2>
+            <div class="project-grid">
+                <div class="project-item">
+                    <img src="images/project1.jpg" alt="Project 1">
+                    <h3>Project One</h3>
+                    <p>A short description of Project One.</p>
                 </div>
                 <div class="project-item">
                     <img src="images/project2.jpg" alt="Project 2">
