--- a/index.html
+++ b/index.html
@@ -103,9 +103,14 @@
                     <a href="https://atlas.cern/"target="_blank">- Learn More on ATLAS.CERN -</a>
                 </div>
                 <div class="project-item">
-                    <img src="images/project2.jpg" alt="Project 2">
+                    <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/IEEEStudent.JPG?raw=true" alt="Project 2">
                     <h3>Secretary - IEEE Student Branches</h3>
-                    <p>A short description of Project Two.</p>
+                    <p>
+                        Jan 2024 - Aug 2024
+                    </p>
+                    <p>Since January 2024, I've been promoting Electrical and Computer Engineering events at SMU through social media, increasing visibility and student engagement. 
+                        Managing digital content has sharpened my communication and marketing skills, helping to create a more connected campus community.
+                    </p>
                 </div>
                 <div class="project-item">
                     <img src="images/project3.jpg" alt="Project 3">
