--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class="container">
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/ECU.JPEG?raw=true" alt="Repairing Friend's MIATA ECU" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/ECU.JPG?raw=true" alt="Repairing Friend's MIATA ECU" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Salad.JPEG?raw=true" alt="Salad" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Salad.jpg=true" alt="Salad" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.JPEG?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.JPG?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="images/photo4.jpg" alt="Gallery Image 4" class="gallery-img" onclick="openModal(this)">
@@ -103,7 +103,7 @@
                     <a href="https://atlas.cern/"target="_blank">- Learn More on ATLAS.CERN -</a>
                 </div>
                 <div class="project-item">
-                    <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/IEEEStudent.JPG?raw=true" alt="Project 2">
+                    <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/IEEEStudent.jpg?raw=true" alt="Project 2">
                     <h3>Secretary - IEEE Student Branches</h3>
                     <p>
                         Jan 2024 - Aug 2024
