--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class="container">
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/ECU.JPG?raw=true" alt="Repairing Friend's MIATA ECU" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/ECU.jpg?raw=true" alt="Repairing Friend's MIATA ECU" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Salad.jpg=true" alt="Salad" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Salad.jpg?raw=true" alt="Salad" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.JPG?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.jpg?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="images/photo4.jpg" alt="Gallery Image 4" class="gallery-img" onclick="openModal(this)">
