--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <p>Since January 2024, I've been promoting Electrical and Computer Engineering events at SMU through social media, increasing visibility and student engagement. 
                         Managing digital content has sharpened my communication and marketing skills, helping to create a more connected campus community.
                     </p>
+                    <a href="https://students.ieee.org/"target="_blank">- Learn More on IEEE Students -</a>
                 </div>
                 <div class="project-item">
                     <img src="images/project3.jpg" alt="Project 3">
