--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                Hey there! I’m Henry Huang, but you can call me Shenqiu if you’re feeling formal. I’m originally from Shanghai, China. YES!!! SHANGHAI!!! But now I’m calling Dallas, TX, working on my Bachelor’s in Electrical and Computer Engineering at SMU. I’am also minoring in Music – Saxophone Performance because, why not blend tech with some tunes, right?
+                Hey there! I’m Henry Huang, but you can call me Shenqiu if you’re feeling formal. I’m originally from Shanghai, China. YES!!! SHANGHAI!!! 
+                But now I’m calling Dallas, TX, working on my Bachelor’s in Electrical and Computer Engineering at SMU. I’am also minoring in Music – Saxophone Performance because, why not blend tech with some tunes, right?
                 <br><br>
-                I’m big into cycling—I did a lot of racing back in high school. There’s something about the freedom of hitting the open road, breathing in the fresh air under the woods, that just feels right. I’m also a huge fan of all things mechanical, whether it’s bike gears, bearings, or car parts. The craftsmanship and design that goes into these things fascinates me.
+                I’m big into cycling—I did a lot of racing back in high school. There’s something about the freedom of hitting the open road, breathing in the fresh air under the woods, that just feels right. 
+                I’m also a huge fan of all things mechanical, whether it’s bike gears, bearings, or car parts. The craftsmanship and design that goes into these things fascinates me.
                 <br><br>
                 Besides tech and bikes, I’m all about music, with J-pop being my go-to jam. And being in Dallas, I’m still getting the hang of blending different cultures, which has been a cool part of my journey here in the States.
                 <br><br>
@@ -92,9 +94,7 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/ATLAS.JPEG?raw=true" alt="Project 1">
                     <h3>Research Assistant - SMU Physics ATLAS</h3>
-                    <p>
-                        May 2024 - Aug 2024
-                    </p>
+                    <p>May 2024 - Aug 2024</p>
                     <p>
                         I was responsible for designing an automated system to ensure instrument stability on the ATLAS Project, 
                         specifically connecting devices across different protocols and programming lab equipment to streamline data collection. 
@@ -105,18 +105,19 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/IEEEStudent.jpg?raw=true" alt="Project 2">
                     <h3>Secretary - IEEE Student Branches</h3>
-                    <p>
-                        Jan 2024 - Aug 2024
-                    </p>
+                    <p>Jan 2024 - Present</p>
                     <p>Since January 2024, I've been promoting Electrical and Computer Engineering events at SMU through social media, increasing visibility and student engagement. 
                         Managing digital content has sharpened my communication and marketing skills, helping to create a more connected campus community.
                     </p>
                     <a href="https://students.ieee.org/"target="_blank">- Learn More on IEEE Students -</a>
                 </div>
                 <div class="project-item">
-                    <img src="images/project3.jpg" alt="Project 3">
-                    <h3>Project Three</h3>
-                    <p>A short description of Project Three.</p>
+                    <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/Band.jpg?raw=true" alt="Project 3">
+                    <h3>Digital Technology Leader - Mustang Marching Band</h3>
+                    <p>Since August 2023, I’ve been mentoring students with no prior saxophone experience in the Mustang Marching Band, helping them grow musically. 
+                        I’ve also introduced new digital technology initiatives, including designing custom-built accessories for band use, enhancing the overall band experience.
+                    </p>
+                    <a href="https://www.smu.edu/studentaffairs/mustang-band"target="_blank">- About SMU Mustang Band -</a>
                 </div>
                 <!-- Add more projects as needed -->
             </div>
