--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
                     <p>A short description of Project Two.</p>
                 </div>
                 <div class="project-item">
-                    <img src="images/project3.jpg" alt="Project 3">
-                    <h3>Project Three</h3>
-                    <p>A short description of Project Three.</p>
+                    <img src="images/project3.jpg" alt="Small Research Papers">
+                    <h3>Small Research Papers</h3>
+                    <p>Here's some small research project I did in the past</p>
+                    <a href=""target="_blank">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</a>
                 </div>
                 <!-- Add more projects as needed -->
             </div>
