--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
                     <img src="images/project3.jpg" alt="Small Research Papers">
                     <h3>Small Research Papers</h3>
                     <p>Here's some small research project I did in the past</p>
-                    <a href=""target="_blank">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</a>
+                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</a>
+                    <p>
+                        The paper explores the evolution of the 1980s Japanese pop music scene, with a focus on socio-economic and cultural factors that influenced the rise of J-pop and City Pop. 
+                        It highlights the artist Mariya Takeuchi and her iconic song Plastic Love, examining its impact on contemporary artists and internet culture.
+                    </p>
                 </div>
                 <!-- Add more projects as needed -->
             </div>
