--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.jpg?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Senso-ji.jpeg?raw=true" alt="Senso-ji" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Senso-ji.jpg?raw=true" alt="Senso-ji" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="images/photo5.jpg" alt="Gallery Image 5" class="gallery-img" onclick="openModal(this)">
