--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                         <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Senso-ji.jpg?raw=true" alt="Senso-ji" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/photo5.jpg" alt="Gallery Image 5" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/BMW.jpg?raw=true" alt="CAR" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/photo6.jpg" alt="Gallery Image 6" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/flight.jpg?raw=true" alt="flight and flight" class="gallery-img" onclick="openModal(this)">
                     </div>
                 </div>
             </div>
