--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Hey, welcome. This is Henry.</h1> <!-- Updated greeting text -->
-            <p>Hope you like this webpage. It is still under construction.</p> <!-- Updated description text -->
+            <p>Hope you enjoy this webpage and the pictures! The cover photo was taken by White Rock Lake in Dallas, TX</p> <!-- Updated description text -->
             <a href="#about" class="cta-button">Learn More</a>
         </div>
     </section>
