--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/ECU.jpg?raw=true" alt="Repairing Friend's MIATA ECU" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Salad.jpg?raw=true" alt="Salad" class="gallery-img" onclick="openModal(this)">
+                        <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/saxophone.jpg?raw=true" alt="Saxophone" class="gallery-img" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Gallery/Cycling.jpg?raw=true" alt="Cycling" class="gallery-img" onclick="openModal(this)">
@@ -114,6 +114,7 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/Band.jpg?raw=true" alt="Project 3">
                     <h3>Digital Technology Leader - Mustang Marching Band</h3>
+                    <p>Aug 2023 - Present</p>
                     <p>Since August 2023, I’ve been mentoring students with no prior saxophone experience in the Mustang Marching Band, helping them grow musically. 
                         I’ve also introduced new digital technology initiatives, including designing custom-built accessories for band use, enhancing the overall band experience.
                     </p>
