--- a/index.html
+++ b/index.html
@@ -131,20 +131,25 @@
             <h2>My Projects</h2>
             <div class="project-grid">
                 <div class="project-item">
-                    <img src="images/project1.jpg" alt="Project 1">
-                    <h3>Project One</h3>
-                    <p>A short description of Project One.</p>
+                    <img src="images/project1.jpg" alt="Individual Research">
+                    <h3>Individual Research</h3>
+                    <a href="https://ieeexplore.ieee.org/document/10090677"target="_blank"><h4>Analysis and Comparison of UART, SPI and I2C</h4></a>
+                    <p>In my recent research, I conducted an in-depth analysis and comparison of three fundamental communication protocols: UART, SPI, and I2C. 
+                        This involved evaluating their performance characteristics, advantages, and limitations across various applications, culminating in a comprehensive research paper. 
+                        The findings were presented and published at the 2023 IEEE 2nd International Conference on Electrical Engineering, Big Data, and Algorithms (EEBDA).</p>
                 </div>
                 <div class="project-item">
                     <img src="images/project2.jpg" alt="Project 2">
-                    <h3>Project Two</h3>
-                    <p>A short description of Project Two.</p>
+                    <h3>Open-source Projects</h3>
+                    <p>3D modeling is my hobby and I'd like to create useful or unuseful items and print them out. I enjoy the open source community and I got a lot of help with a lot of people. 
+                        I built a 3D printer with open-sourced BOM and 
+                    </p>
                 </div>
                 <div class="project-item">
                     <img src="images/project3.jpg" alt="Small Research Papers">
                     <h3>Small Research Papers</h3>
                     <p>Here's some small research project I did in the past. Click the title to view the paper:</p>
-                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</a>
+                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em>Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
                     <p>
                         The paper explores the evolution of the 1980s Japanese pop music scene, with a focus on socio-economic and cultural factors that influenced the rise of J-pop and City Pop. 
                         It highlights the artist Mariya Takeuchi and her iconic song Plastic Love, examining its impact on contemporary artists and internet culture.
@@ -165,6 +170,7 @@
                 <a href="https://www.instagram.com/henryyyyh_ins?igsh=NmVvdnV2c25kOXRy&utm_source=qr">Instagram</a>
                 <a href="https://www.thingiverse.com/henryyyyhuang/designs">Thingiverse</a>
                 <a href="https://github.com/Superuser-Henry">GitHub</a>
+                <a href="mailto:shenqiuh@smu.edu">Email</a>
             </div>
         </div>
     </footer>
