--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
      <section class="projects" id="projects">
         <div class="container">
             <h2>My Projects</h2>
+            <a>Click the title of project to view in details</a>
             <div class="project-grid">
                 <div class="project-item">
-                    <img src="images/project1.jpg" alt="Individual Research">
                     <h3>Individual Research</h3>
                     <a href="https://ieeexplore.ieee.org/document/10090677"target="_blank"><h4>Analysis and Comparison of UART, SPI and I2C</h4></a>
                     <p>In my recent research, I conducted an in-depth analysis and comparison of three fundamental communication protocols: UART, SPI, and I2C. 
@@ -139,14 +139,15 @@
                         The findings were presented and published at the 2023 IEEE 2nd International Conference on Electrical Engineering, Big Data, and Algorithms (EEBDA).</p>
                 </div>
                 <div class="project-item">
-                    <img src="images/project2.jpg" alt="Project 2">
                     <h3>Open-source Projects</h3>
+                    <a href="https://www.thingiverse.com/thing:5531157"target="_blank"><h4>Bike Computer Mount</h4></a>
                     <p>3D modeling is my hobby and I'd like to create useful or unuseful items and print them out. I enjoy the open source community and I got a lot of help with a lot of people. 
-                        I built a 3D printer with open-sourced BOM and 
+                        I built a 3D printer with open-sourced BOM and firmwork, keyboards with open sorce pcb files and I asked for manufacture it and soldered by myself.
+                        I made a Bike Computer mount by utilized Fusion 360 to create a custom Bike Computer mount, modeling and performing static simulation analysis to ensure durability and functionality. 
+                        And it is available on Thingiverse.
                     </p>
                 </div>
                 <div class="project-item">
-                    <img src="images/project3.jpg" alt="Small Research Papers">
                     <h3>Small Research Papers</h3>
                     <p>Here's some small research project I did in the past. Click the title to view the paper:</p>
                     <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em>Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
