--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="project-item">
                     <h3>Small Research Papers</h3>
-                    <p>Here's some small research project I did in the past. Click the title to view the paper:</p>
+                    <h5>Here's some small research project I did in the past. Click the title to view the paper:</h5>
                     <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em>Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
                     <p>
                         The paper explores the evolution of the 1980s Japanese pop music scene, with a focus on socio-economic and cultural factors that influenced the rise of J-pop and City Pop. 
