--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Hey, welcome. This is Henry.</h1> <!-- Updated greeting text -->
-            <p>Hope you enjoy this webpage and the pictures! The cover photo was taken by White Rock Lake in Dallas, TX</p> <!-- Updated description text -->
+            <p style="font-size: 100%;">Hope you enjoy this webpage and the pictures! The cover photo was taken by White Rock Lake in Dallas, TX</p> <!-- Updated description text -->
             <a href="#about" class="cta-button">Learn More</a>
         </div>
     </section>
@@ -133,14 +133,14 @@
             <div class="project-grid">
                 <div class="project-item">
                     <h3>Individual Research</h3>
-                    <a href="https://ieeexplore.ieee.org/document/10090677"target="_blank"><h4>Analysis and Comparison of UART, SPI and I2C</h4></a>
+                    <a href="https://ieeexplore.ieee.org/document/10090677"target="_blank"><connectlink>Analysis and Comparison of UART, SPI and I2C</connectlink></a>
                     <p>In my recent research, I conducted an in-depth analysis and comparison of three fundamental communication protocols: UART, SPI, and I2C. 
                         This involved evaluating their performance characteristics, advantages, and limitations across various applications, culminating in a comprehensive research paper. 
                         The findings were presented and published at the 2023 IEEE 2nd International Conference on Electrical Engineering, Big Data, and Algorithms (EEBDA).</p>
                 </div>
                 <div class="project-item">
                     <h3>Open-source Projects</h3>
-                    <a href="https://www.thingiverse.com/thing:5531157"target="_blank"><h4>Bike Computer Mount</h4></a>
+                    <a href="https://www.thingiverse.com/thing:5531157"target="_blank"><connectlink>Bike Computer Mount</connectlink></a>
                     <p>3D modeling is my hobby and I'd like to create useful or unuseful items and print them out. I enjoy the open source community and I got a lot of help with a lot of people. 
                         I built a 3D printer with open-sourced BOM and firmwork, keyboards with open sorce pcb files and I asked for manufacture it and soldered by myself.
                         I made a Bike Computer mount by utilized Fusion 360 to create a custom Bike Computer mount, modeling and performing static simulation analysis to ensure durability and functionality. 
@@ -150,7 +150,7 @@
                 <div class="project-item">
                     <h3>Small Research Papers</h3>
                     <h5>Here's some small research project I did in the past. Click the title to view the paper:</h5>
-                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em>Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
+                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em style="color: #213a53;">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
                     <p>
                         The paper explores the evolution of the 1980s Japanese pop music scene, with a focus on socio-economic and cultural factors that influenced the rise of J-pop and City Pop. 
                         It highlights the artist Mariya Takeuchi and her iconic song Plastic Love, examining its impact on contemporary artists and internet culture.
