--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/ATLAS.JPEG?raw=true" alt="Project 1">
                     <h3>Research Assistant - SMU Physics ATLAS</h3>
-                    <p>May 2024 - Aug 2024</p>
+                    <p style="font-weight: bold;">May 2024 - Aug 2024</p>
                     <p>
                         I was responsible for designing an automated system to ensure instrument stability on the ATLAS Project, 
                         specifically connecting devices across different protocols and programming lab equipment to streamline data collection. 
@@ -105,7 +105,7 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/IEEEStudent.jpg?raw=true" alt="Project 2">
                     <h3>Secretary - IEEE Student Branches</h3>
-                    <p>Jan 2024 - Present</p>
+                    <p style="font-weight: bold;">Jan 2024 - Present</p>
                     <p>Since January 2024, I've been promoting Electrical and Computer Engineering events at SMU through social media, increasing visibility and student engagement. 
                         Managing digital content has sharpened my communication and marketing skills, helping to create a more connected campus community.
                     </p>
@@ -114,7 +114,7 @@
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/Band.jpg?raw=true" alt="Project 3">
                     <h3>Digital Technology Leader - Mustang Marching Band</h3>
-                    <p>Aug 2023 - Present</p>
+                    <p style="font-weight: bold;">Aug 2023 - Present</p>
                     <p>Since August 2023, I’ve been mentoring students with no prior saxophone experience in the Mustang Marching Band, helping them grow musically. 
                         I’ve also introduced new digital technology initiatives, including designing custom-built accessories for band use, enhancing the overall band experience.
                     </p>
